--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <img src="./Images/ms-video-icon.png" alt="" />
           </div>
           <div class="history2">
-            <h2>Windows.mp4</h2>
+            <h2>Bilal Web Developer</h2>
             <h4>Yesterday 3:50 PM</h4>
           </div>
         </div>
